#264 Fix tab overflow issue by reducing padding on mobile

--- a/src/client/common/tabs.scss
+++ b/src/client/common/tabs.scss
@@ -32,7 +32,7 @@
   color: $off-black;
   display: inline-block;
   margin: 0 0.5em 0 0;
-  padding: 0.5em 1.5em;
+  padding: 0.5em 1.2em;
   position: relative;
   text-align: center;
   text-decoration: none;
@@ -44,6 +44,10 @@
 
   &:last-child {
     margin-right: 0;
+  }
+
+  @include respond-to(tablet, desktop) {
+    padding: 0.5em 1.5em;
   }
 }
 
